style.css
body {
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-image: url('img/5_background/desert-bg.png');
    background-position: center;
    height: 100vh;
    width: 100vw;
    font-family: 'zabars', Arial, Helvetica, sans-serif;
    background-size: cover;
}

h1 {
    font-size: 56px;
    letter-spacing: 4px;
    text-shadow: 6px 4px 6px rgba(0, 0, 0, 0.5);
    margin-bottom: 20px;
}

.main {
    position: relative;
    height: 100%;
}

.startDiv {
    position: absolute;
    top: 0;
    left: 0;
}

.description-container {
    display: flex;
    margin-bottom: 20px;
}

.description {
    display: flex;
    align-items: center;
    letter-spacing: 1px;
    text-shadow: 6px 4px 4px rgb(0 0 0 / 50%);
    font-size: 21px;
    margin-left: 20px;
    margin-right: 20px;
}

.soundOnOFF {
    position: absolute;
    z-index: 4;
    bottom: 10px;
    right: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    letter-spacing: 1px;
    text-shadow: 6px 4px 4px rgb(0 0 0 / 50%);
    font-size: 18px;
    padding: 8px;
}

.startBtn, .restartBtn {
    cursor: pointer;
    font-size: 36px;
    letter-spacing: 2px;
    text-shadow: 6px 4px 6px rgb(0 0 0 / 50%);
    text-align: center;
    margin-bottom: 20px;
}

.startBtn:hover, .restartBtn:hover, .soundIcon:hover {
    transform: scale(1.2);
}

.soundIcon {
    width: 28px;
}

.d-none {
    display: none;
}

canvas {
    background-color: black;
    display: block;
}

.mobileOverlay {
    position: absolute;
    z-index: 2;
    top: 0;
    width: 100%;
    height: 100%;
    display: flex;
    visibility: hidden;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.ml-auto {
    margin-left: auto;
    margin-right: auto;
}

.ml-8 {
    margin-left: 8px;
}

.mr-8 {
    margin-right: 8px;
}

.panel {
    padding: 12px;
    display: flex;
    justify-content: space-between;
    margin-top: 36px;
}

.panelWrapper {
    display: flex;
}

.mobileBTN {
    background-color: transparent;
    border: none;
}

.d-flex {
    display: flex;
}

.mobileSoundContainer {
    margin-left: 4px;
    margin-right: 4px;
}

.endScreen {
    position: absolute;
    z-index: 1;
    top: 0;
}

.turnDevice {
    display: none;
}

@font-face {
    font-family: 'zabars';
    src: url('fonts/zabars.ttf') format('truetype');
    /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
}

@media only screen and (max-width: 860px) {
    h1, .startBtn, .restartBtn, .description-container, .soundOnOFF {
        display: none;
    }

    canvas, .main, .startScreen {
        width: 100%;
    }

    .endScreen {
        width: 100%;
        height: 100%
    }

    .mobileOverlay {
        visibility: visible;
    }
}

@media only screen and (max-height: 480px) {
    canvas, .startScreen {
        height: 100%;
    }
}

/* The orientation CSS media feature can be used to test the orientation of the viewport (or the page box, for paged media) */
@media screen and (orientation:portrait) {
    .turnDevice {
        display: unset;
        display: flex;
        justify-content: center;
        align-items: center;
        z-index: 3;
        background-color: rgba(0, 0, 0, 0.95);
        color: rgb(232, 193, 20);
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        font-size: 24px;
    }
}

